// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> renders component 1`] = `
.c0 {
  width: 100%;
  border: 1px solid #88989E;
  padding: 12px 16px;
  outline: 0;
  resize: none;
}

<input
  class="c0"
  name="nome"
  placeholder="Nome"
  type="text"
  value="Test"
/>
`;

exports[`<TextField /> when field is invalid displays the respective error message 1`] = `
.c0 {
  width: 100%;
  border: 1px solid #88989E;
  padding: 12px 16px;
  outline: 0;
  resize: none;
}

<input
  class="c0"
  name="email"
  placeholder="Email"
  type="text"
  value="dev@test.com"
/>
`;
